app-constructs/tgnnapp/neo4j/setup/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-tgnnapp-neo4j-svc
  namespace: tgnnapp
spec:
  ports:
    - name: tcp-bolt
      port: 7687
      nodePort: 30087
      protocol: TCP
      targetPort: 7687
    - name: tcp-http
      port: 7474
      nodePort: 30074
      protocol: TCP
      targetPort: 7474
    - name: tcp-https
      port: 7473
      nodePort: 30073
      protocol: TCP
      targetPort: 7473
  selector:
    app: neo4j
  type: NodePort
